fix error message on mobile

--- a/styles.css
+++ b/styles.css
@@ -176,8 +176,12 @@ body.page-default {
   border-radius: 5px;
   font-size: 0.8em;
   font-family: "Montserrat", sans-serif;
+  bottom: 30%;
 }
-
+.error-absolute {
+  position: absolute;
+  bottom: 30%;
+}
 .mode-buttons-container.visible {
   opacity: 1;
 }
@@ -1026,6 +1030,10 @@ body.market .section-title {
   }
   .stat-box h3 {
     font-size: 1em;
+  }
+  #errorMessage {
+    font-size: 0.75em;
+    bottom: 32%;
   }
 }
 
